--- a/Hetuk/React/form/package.json
+++ b/Hetuk/React/form/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "proptypes": "^1.1.0",
+    "prototypes": "^3.0.3",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
